--- a/OneDrive/Python - VSC/Clase 25 - PROYECTO FINAL/Proyecto_Final_Python/users/templates/users/editar_usuario.html
+++ b/OneDrive/Python - VSC/Clase 25 - PROYECTO FINAL/Proyecto_Final_Python/users/templates/users/editar_usuario.html
@@ -27,22 +27,30 @@
                         </div>
                     </header>
                     
-                    <h2>Editar perfil de {{usuario}}</h2>   
+                    <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
 
-                    <form action="" method="POST" enctype="multipart/form-data">
-                        {% csrf_token %}
+                        <h2>Editar perfil de {{usuario}}</h2>   
 
-                        <table>
-                            {{ mi_form.as_table }}
-                        </table>
-                        <input type="submit" value="Actualizar">
-                        <a class="btn btn-primary" href="{% url 'CambiarPass' %}" style="background-color: blue; color: white; padding: 15px 32px;" >Cambiar contraseña</a>
-                        <a class="btn btn-primary" href="{% url 'padre' %}" style="background-color: blue; color: white; padding: 15px 32px;" >Volver al inicio</a>
-                        
-                        <p>                       
-                        </p>
+                    </div>
 
-                    </form>
+
+                    <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+                        <form action="" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+
+                            <table>
+                                {{ mi_form.as_table }}
+                            </table>
+                            <input type="submit" value="Actualizar">
+                            <a class="btn btn-primary" href="{% url 'CambiarPass' %}" style="background-color: rgb(99, 99, 126); color: white; padding: 5px 10px;" >Cambiar contraseña</a>
+                            <a class="btn btn-primary" href="{% url 'padre' %}" style="background-color: rgb(99, 99, 126); color: white; padding: 5px 10px;" >Volver al inicio</a>
+                            
+                            <p>                       
+                            </p>
+
+                        </form>
+                    
+                    </div>
 
                 {% endblock %}
 
